# adaptuner

./: .gitattributes  .gitignore  Cargo.toml  Changelog.md  Readme.md  conf.yaml  config.json  default.nix  flake.nix  minimal.yaml  todo.md
.github/workflows/: build.yml
assets/: AppIcon.icns  adaptuner.desktop  icon.rgba
assets/icon/: aplus.tex
configs/: Readme.md  catchall.hjson  cembalo_cromatico.yaml  crucifixus.hjson  lorem.hjson  springs.yaml  template.yaml
doc/: configuration-file.md  installing.md  instruments.md  springs.tex  tui.md
doc/website/: index.md  template.html
share/applications/: adaptuner.desktop  com.carlhammann.adaptuner.desktop
src/: backend.rs  bindable.rs  config.rs  hashmaptree.rs  keystate.rs  lib.rs  main.rs  msg.rs  neighbourhood.rs  notestore.rs  pattern.rs  process.rs  reference.rs  run.rs  springs.rs  util.rs
src/backend/: mod.rs  onlyforward.rs  pitchbend.rs  pitchbend12.rs  pitchbend16.rs  trait.rs
src/config/: mod.rs  trait.rs
src/custom_serde/: common.rs  mod.rs  named_interval.rs  neighbourhood.rs  stack.rs  stacktype.rs  version.rs
src/gui/: backend.rs  backendwindow.rs  common.rs  config.rs  connection.rs  connectionwindow.rs  diffshow.rs  latency.rs  latencywindow.rs  lattice.rs  latticecontrol.rs  latticecontrolwindow.rs  latticewindow.rs  manywindows.rs  mod.rs  notes.rs  notewindow.rs  notifications.rs  reference.rs  referencewindow.rs  staticcontrolwindow.rs  strategy.rs  toplevel.rs  trait.rs  tuningreference.rs  tuningreferencewindow.rs
src/interval/: mod.rs  stack.rs  temperament.rs
src/maybeconnected/: input.rs  output.rs
src/notename/: correction.rs  johnston.rs  mod.rs
src/process/: fixed12.rs  fromstrategy.rs  mod.rs  onlyforward.rs  rhai.rs  sketch.rs  static12.rs  trait.rs  walking.rs
src/strategy/: anchorfixed.rs  mod.rs  static.rs  trait.rs  twostep.rs
src/tui/: grid.rs  latencyreporter.rs  mod.rs  onlynotify.rs  trait.rs  walking.rs  wrappedgrid.rs
src/tuning/: mod.rs
src/util/: dimension.rs  list_action.rs  lu.rs  mod.rs  mod12.rs  springs.rs  subsequences.rs  (+1 more)
website/: build.sh  documentation.md  index.md  links-to-html.lua
(+43 files in other folders)
