[package]
name = "adaptuner"
version = "0.1.0"
edition = "2021"

[dependencies]
midi-msg = "0.6.1"
midir = "0.9.1"
ndarray = "0.15.6"
num-integer = "0.1.46"
num-traits = "0.2.18"
serde_derive = "1.0.198"
serde = "1.0.204"
num-rational = "0.4.2"
eframe = "0.31.1"
egui_extras = { version = "0.31.1", features = ["svg"]}
serde_yml = "0.0.12"

[dev-dependencies]
approx = "0.5.1"
pretty_assertions = "1.4.0"
