[package]
name = "adaptuner"
version = "0.2.0"
edition = "2021"

[package.metadata.bundle]
identifier = "com.carlhammann.adaptuner"
icon = [ "share/icons/**/*.png" ]

[dependencies]
midi-msg = "0.6.1"
midir = "0.10.2"
ndarray = "0.15.6"
num-integer = "0.1.46"
num-traits = "0.2.18"
serde_derive = "1.0.198"
serde = "1.0.204"
num-rational = "0.4.2"
eframe = "0.31.1"
ecolor = "0.31.1"
egui_extras = { version = "0.31.1", features = ["svg"]}
serde_yml = "0.0.12"
egui-file-dialog = "0.10.0"
similar = "2.7.0"
serde_with = "3.14.0"
image = {version = "0.25.6", default-features = false, features = ["png"]}

[dev-dependencies]
approx = "0.5.1"
pretty_assertions = "1.4.0"
