[package]
name = "adaptuner"
version = "0.2.1"
edition = "2021"

[dependencies]
midi-msg = "0.6.1"
midir = "0.10.2"
ndarray = "0.15.6"
num-integer = "0.1.46"
num-traits = "0.2.18"
serde_derive = "1.0.198"
serde = "1.0.204"
num-rational = "0.4.2"
eframe = "0.31.1"
ecolor = "0.31.1"
egui_extras = { version = "0.31.1", features = ["svg"] }
serde_yml = "0.0.12"
egui-file-dialog = "0.10.0"
similar = "2.7.0"
serde_with = "3.14.0"

[dev-dependencies]
approx = "0.5.1"
pretty_assertions = "1.4.0"

[package.metadata.bundle]
name = "adaptuner"
identifier = "de.carlhammann.adaptuner"
version = "0.2.1"
icon = ["assets/AppIcon.icns"]
copyright = "Copyright (c) Hammann 2025. All rights reserved."
category = "Productivity"
short_description = "A MIDI tuner"
long_description = """
    This is a MIDI tuner, which uses MIDI standard tuning to enable playing just intonation on the fly.
"""
osx_url_schemes = ["de.carlhammann.adaptuner"]
